<resources>
    <string name="app_name">Smart Gloves</string>
    //logIn
    <string name="login_name">Smart Gloves</string>
    <string name="signA">Sign In to Continue</string>
    <string name="signB">Sign In</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="noAcc">Do not have account? Register</string>
    <string name="reg">Register Account</string>

    //navigation
    <string name="home_bar">Home</string>
    <string name="loc_bar">Location</string>
    <string name="profile_bar">Profile</string>

    //home
    <string name="name_profile">Putri Cantika</string>
    <string name="status">Connected</string>
    <string name="squareA">bpm</string>
    <string name="squareB">SpO2</string>
    <string name="squareC">Celcius</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

    //register
    <string name="emailReg">Email</string>
    <string name="passReg">Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="nameReg">Name</string>
    <string name="haveAcc">Already have account? Sign In</string>
    <string name="log">Register</string>

    //bpm
    <string name="bpm">85 bpm</string>
    //spo2
    <string name="spo2">97%</string>
    <string name="spo22">spO2</string>
    //suhu
    <string name="suhu">35</string>
    <string name="suhu2">celcius</string>

    //graph
    <string name="graph">Graph Setting</string>
    <string name="graph1">Refresh Sensor</string>
    <string name="graph2">Reset Graph</string>
    <string name="graph3">Medication</string>

    //profile
    <string name="profile">Settings</string>
    <string name="profile1">Notification</string>
    <string name="profile2">Device Setting</string>
    <string name="profile3">Smart Gloves Setting</string>
    <string name="profile4">Privacy</string>
    <string name="profile5">Security</string>
    <string name="profile6">Help</string>
    <string name="profile7">About</string>
    <string name="name">Edit name</string>
    <string name="save">Save Change</string>
    <string name="change">Change</string>

</resources>