<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".home.ProfileFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@color/dark_blue_grey">
    </View>

    <RelativeLayout
        android:id="@+id/parentRelative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_profile"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_user"
            />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            style="@style/fontStyleNameProfile"
            android:text="@string/name_profile"
            android:layout_toRightOf="@id/img_profile"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_toRightOf="@id/img_profile"
            style="@style/fontStyleStatus"
            android:text="@string/status"
            android:layout_below="@id/tv_name"/>

        <ImageButton
            android:id="@+id/img_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/ic_edit_black_24dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="200dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_bpm"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_margin="25dp"
                app:cardCornerRadius="20dp"
                app:cardBackgroundColor="@color/teal">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

<!--                    <TextView-->
<!--                        android:id="@+id/txt_bpm"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_centerHorizontal="true"-->
<!--                        android:layout_marginTop="30dp"-->
<!--                        style="@style/fontStyleBpm"-->
<!--                        android:text="@string/bpm"-->
<!--                        />-->

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="40dp"
                        android:layout_marginStart="20dp"
                        android:background="@drawable/ic_battery"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </RelativeLayout>
    </RelativeLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="450dp"
            android:orientation="vertical">

             <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="@string/profile"
            style="@style/fontStyleOption"/>
        </LinearLayout>
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="470dp">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="25dp"
                 android:orientation="vertical">
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="25dp"
                     android:layout_marginTop="15dp"
                     android:text="@string/profile1"
                     style="@style/fontStyleOptionSelect"
                     />

                 <View
                     android:layout_width="match_parent"
                     android:visibility="visible"
                     android:layout_marginTop="10dp"
                     android:layout_marginStart="25dp"
                     android:layout_marginEnd="25dp"
                     android:layout_height="2dp"
                     android:background="@color/grey"/>

                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="25dp"
                     android:layout_marginTop="15dp"
                     android:text="@string/profile2"
                     style="@style/fontStyleOptionSelect"
                     />

                 <View
                     android:layout_width="match_parent"
                     android:visibility="visible"
                     android:layout_marginTop="10dp"
                     android:layout_marginStart="25dp"
                     android:layout_marginEnd="25dp"
                     android:layout_height="2dp"
                     android:background="@color/grey"/>

                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="25dp"
                     android:layout_marginTop="15dp"
                     android:text="@string/profile3"
                     style="@style/fontStyleOptionSelect"
                     />

                 <View
                     android:layout_width="match_parent"
                     android:visibility="visible"
                     android:layout_marginTop="10dp"
                     android:layout_marginStart="25dp"
                     android:layout_marginEnd="25dp"
                     android:layout_height="2dp"
                     android:background="@color/grey"/>

                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="25dp"
                     android:layout_marginTop="15dp"
                     android:text="@string/profile4"
                     style="@style/fontStyleOptionSelect"
                     />

                 <View
                     android:layout_width="match_parent"
                     android:visibility="visible"
                     android:layout_marginTop="10dp"
                     android:layout_marginStart="25dp"
                     android:layout_marginEnd="25dp"
                     android:layout_height="2dp"
                     android:background="@color/grey"/>

                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="25dp"
                     android:layout_marginTop="15dp"
                     android:text="@string/profile5"
                     style="@style/fontStyleOptionSelect"
                     />

                 <View
                     android:layout_width="match_parent"
                     android:visibility="visible"
                     android:layout_marginTop="10dp"
                     android:layout_marginStart="25dp"
                     android:layout_marginEnd="25dp"
                     android:layout_height="2dp"
                     android:background="@color/grey"/>

                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="25dp"
                     android:layout_marginTop="15dp"
                     android:text="@string/profile6"
                     style="@style/fontStyleOptionSelect"
                     />

                 <View
                     android:layout_width="match_parent"
                     android:visibility="visible"
                     android:layout_marginTop="10dp"
                     android:layout_marginStart="25dp"
                     android:layout_marginEnd="25dp"
                     android:layout_height="2dp"
                     android:background="@color/grey"/>

                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="25dp"
                     android:layout_marginTop="15dp"
                     android:text="@string/profile7"
                     style="@style/fontStyleOptionSelect"
                     />

                 <View
                     android:layout_width="match_parent"
                     android:visibility="visible"
                     android:layout_marginTop="10dp"
                     android:layout_marginStart="25dp"
                     android:layout_marginEnd="25dp"
                     android:layout_height="2dp"
                     android:background="@color/grey"/>
             </LinearLayout>
         </androidx.core.widget.NestedScrollView>



</FrameLayout>