<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".home.HomeFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@color/dark_blue_grey">
    </View>

    <RelativeLayout
        android:id="@+id/parentRelative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="70dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_profile"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_user"
            />

        <TextView
            android:id="@+id/name_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            style="@style/fontStyleNameProfile"
            android:text="@string/name_profile"
            android:layout_toRightOf="@id/img_profile"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_toRightOf="@id/img_profile"
            style="@style/fontStyleStatus"
            android:text="@string/status"
            android:layout_below="@id/name_txt"/>

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="200dp">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_bpm"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_margin="25dp"
                app:cardCornerRadius="20dp"
                app:cardBackgroundColor="@color/teal">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:id="@+id/txt_bpm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="30dp"
                        style="@style/fontStyleBpm"
                        android:text="@string/bpm"
                        />

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginTop="5dp"
                        android:layout_below="@id/txt_bpm"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/ic_pulse"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_spo2"
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_marginTop="25dp"
                android:layout_marginStart="10dp"
                android:layout_toRightOf="@id/cv_bpm"
                app:cardCornerRadius="20dp"
                app:cardBackgroundColor="@color/teal">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:id="@+id/txt_spo2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="20dp"
                        style="@style/fontStyleBpm"
                        android:text="@string/spo2"
                        />

                    <TextView
                        android:id="@+id/txt_spo22"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_below="@id/txt_spo2"
                        style="@style/fontStyleBpmBelow"
                        android:text="@string/spo22"
                        />

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="15dp"
                        android:layout_toRightOf="@id/txt_spo22"
                        android:background="@drawable/ic_circle_black_24dp"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_celcius"
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_toRightOf="@id/cv_bpm"
                android:layout_below="@id/cv_spo2"
                app:cardCornerRadius="20dp"
                app:cardBackgroundColor="@color/teal">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:id="@+id/txt_suhu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="20dp"
                        style="@style/fontStyleBpm"
                        android:text="@string/suhu"
                        />

                    <TextView
                        android:id="@+id/txt_suhu2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_below="@id/txt_suhu"
                        style="@style/fontStyleBpmBelow"
                        android:text="@string/suhu2"
                        />

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="15dp"
                        android:layout_toRightOf="@id/txt_suhu2"
                        android:background="@drawable/ic_device_thermostat_black_24dp"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </RelativeLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp">



    </LinearLayout>

</FrameLayout>